--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,7 +12,7 @@ h2{
   font-size: 42px;
 }
 
-link{
+.link{
   color: Aquamarine
   font-size: 16px;
 }
@@ -22,12 +22,12 @@ link{
   color: gray;
 }
 
-description{
+.description{
   font-family: Verdana;
   font-size: 21px;
   color: gray;
 }
 
-background-color{
+.background-color{
   background-color: black;
 }
